# niftivis

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
niftivis/: __init__.py  __main__.py  main.py  niftivis.py
tests/: test_niftivis.py
